--- a/MusicSearch/Storyboards/Base.lproj/Main.storyboard
+++ b/MusicSearch/Storyboards/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="MYO-aD-coF"/>
                                 </constraints>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="N2X-Sa-rrc">
                                 <rect key="frame" x="10" y="132" width="394" height="730"/>
