--- a/MusicSearch/Storyboards/Base.lproj/Main.storyboard
+++ b/MusicSearch/Storyboards/Base.lproj/Main.storyboard
@@ -171,21 +171,81 @@
             </objects>
             <point key="canvasLocation" x="928.98550724637687" y="83.705357142857139"/>
         </scene>
-        <!--View Controller-->
+        <!--Profile View Controller-->
         <scene sceneID="m0j-n8-Nu4">
             <objects>
-                <viewController id="6Zz-ua-9i5" sceneMemberID="viewController">
+                <viewController id="6Zz-ua-9i5" customClass="ProfileViewController" customModule="MusicSearch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kNF-tX-tBh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Acm-EE-NS2">
+                                <rect key="frame" x="20" y="88" width="374" height="355"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="19a-Q8-DoH">
+                                        <rect key="frame" x="67" y="20" width="240" height="240"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Omar Yousef" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b2x-ah-iZa">
+                                        <rect key="frame" x="67" y="291" width="240" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="6gy-7Z-RUc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="19a-Q8-DoH" firstAttribute="leading" secondItem="Acm-EE-NS2" secondAttribute="leading" constant="67" id="40r-mD-a4O"/>
+                                    <constraint firstItem="19a-Q8-DoH" firstAttribute="trailing" secondItem="b2x-ah-iZa" secondAttribute="trailing" id="8MN-Ah-ZOh"/>
+                                    <constraint firstItem="b2x-ah-iZa" firstAttribute="top" secondItem="19a-Q8-DoH" secondAttribute="bottom" constant="31" id="90U-qO-zbM"/>
+                                    <constraint firstItem="19a-Q8-DoH" firstAttribute="leading" secondItem="b2x-ah-iZa" secondAttribute="leading" id="9tb-mQ-yeO"/>
+                                    <constraint firstItem="19a-Q8-DoH" firstAttribute="centerX" secondItem="Acm-EE-NS2" secondAttribute="centerX" id="QEz-pc-0JT"/>
+                                    <constraint firstAttribute="bottom" secondItem="b2x-ah-iZa" secondAttribute="bottom" constant="34" id="Vg6-y7-svM"/>
+                                    <constraint firstItem="19a-Q8-DoH" firstAttribute="top" secondItem="Acm-EE-NS2" secondAttribute="top" constant="20" id="xee-gs-1hN"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qLZ-sJ-XAR">
+                                <rect key="frame" x="20" y="464" width="374" height="300"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQA-hs-YHA">
+                                        <rect key="frame" x="8" y="8" width="358" height="284"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ZQA-hs-YHA" firstAttribute="trailing" secondItem="qLZ-sJ-XAR" secondAttribute="trailingMargin" id="0th-a9-Nbc"/>
+                                    <constraint firstItem="ZQA-hs-YHA" firstAttribute="leading" secondItem="qLZ-sJ-XAR" secondAttribute="leadingMargin" id="18P-QD-Fzn"/>
+                                    <constraint firstItem="ZQA-hs-YHA" firstAttribute="top" secondItem="qLZ-sJ-XAR" secondAttribute="topMargin" id="DVk-35-rFe"/>
+                                    <constraint firstItem="ZQA-hs-YHA" firstAttribute="bottom" secondItem="qLZ-sJ-XAR" secondAttribute="bottomMargin" id="FVP-do-jbW"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="CWT-Tu-Yzd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Acm-EE-NS2" firstAttribute="centerX" secondItem="kNF-tX-tBh" secondAttribute="centerX" id="KZ6-aR-Eer"/>
+                            <constraint firstItem="Acm-EE-NS2" firstAttribute="leading" secondItem="qLZ-sJ-XAR" secondAttribute="leading" id="VaH-cw-ekn"/>
+                            <constraint firstItem="Acm-EE-NS2" firstAttribute="trailing" secondItem="qLZ-sJ-XAR" secondAttribute="trailing" id="a45-gx-4jp"/>
+                            <constraint firstItem="Acm-EE-NS2" firstAttribute="top" secondItem="CWT-Tu-Yzd" secondAttribute="top" id="bAr-UK-Nx4"/>
+                            <constraint firstAttribute="bottom" secondItem="Acm-EE-NS2" secondAttribute="bottom" constant="453" id="iuW-Br-35v"/>
+                            <constraint firstItem="qLZ-sJ-XAR" firstAttribute="top" secondItem="Acm-EE-NS2" secondAttribute="bottom" constant="21" id="tON-2w-HMJ"/>
+                            <constraint firstItem="Acm-EE-NS2" firstAttribute="leading" secondItem="kNF-tX-tBh" secondAttribute="leadingMargin" id="xgn-4A-dUz"/>
+                            <constraint firstItem="CWT-Tu-Yzd" firstAttribute="bottom" secondItem="qLZ-sJ-XAR" secondAttribute="bottom" constant="98" id="zdC-yb-hY3"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5Nj-S3-0fy"/>
+                    <connections>
+                        <outlet property="descriptionLabel" destination="ZQA-hs-YHA" id="vKN-ra-xPB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WCl-Io-dVE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1690" y="84"/>
+            <point key="canvasLocation" x="1689.8550724637682" y="83.705357142857139"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pNF-Sg-Hk0">
@@ -210,6 +270,7 @@
         <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
         <image name="headphones" catalog="system" width="128" height="121"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
+        <image name="profile" width="800" height="800"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
